--- a/app/src/main/res/layout/global_dialog_layout.xml
+++ b/app/src/main/res/layout/global_dialog_layout.xml
@@ -1,49 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
     android:gravity="center">
 
     <LinearLayout
-        android:layout_width="700dp"
-        android:layout_height="500dp"
-        android:layout_gravity="center"
+        android:layout_width="900dp"
+        android:layout_height="wrap_content"
         android:background="@android:color/white"
-        android:elevation="8dp"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/dialog_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            tools:text="Title" />
-
-        <TextView
-            android:id="@+id/dialog_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:textSize="18sp"
-            tools:text="Message" />
-
-        <ImageView
-            android:layout_width="400dp"
-            android:layout_height="300dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/ic_launcher_background"
-            android:src="@drawable/ic_launcher_foreground" />
+        <include layout="@layout/global_dialog_item_layout" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginTop="25dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginEnd="20dp"
             android:gravity="end"
             android:orientation="horizontal">
 
@@ -51,15 +27,14 @@
                 android:id="@+id/dialog_confirm_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
                 android:text="@string/common_button_cancel" />
 
             <Button
                 android:id="@+id/dialog_cancel_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:text="@string/common_button_confirm" />
-
         </LinearLayout>
 
     </LinearLayout>
