--- a/app/src/main/res/layout/global_dialog_layout.xml
+++ b/app/src/main/res/layout/global_dialog_layout.xml
@@ -11,27 +11,37 @@
         android:background="@android:color/white"
         android:orientation="vertical">
 
-        <include layout="@layout/global_dialog_item_layout" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/dialog_error_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginTop="25dp"
-            android:layout_marginBottom="20dp"
             android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
             android:gravity="end"
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/dialog_confirm_button"
+                android:id="@+id/dialog_next_bt"
+                android:text="*next"
+                android:layout_marginEnd="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/dialog_confirm_bt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:text="@string/common_button_cancel" />
 
             <Button
-                android:id="@+id/dialog_cancel_button"
+                android:id="@+id/dialog_cancel_bt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/common_button_confirm" />
