--- a/app/src/main/res/layout/global_dialog_layout.xml
+++ b/app/src/main/res/layout/global_dialog_layout.xml
@@ -14,7 +14,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/dialog_error_rv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:overScrollMode="never" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -28,10 +29,10 @@
 
             <Button
                 android:id="@+id/dialog_next_bt"
-                android:text="*next"
-                android:layout_marginEnd="10dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:text="*next" />
 
             <Button
                 android:id="@+id/dialog_confirm_bt"
