--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="transparent">#00FFFFFF</color>
     <color name="splash_bg">#FF191A1D</color>
     <color name="date_picker_select_bg">#FF00DE93</color>
+    <color name="time_picker_background_color">#FF2C2C2C</color>
+    <color name="time_picker_select_color">#FF00DE93</color>
 </resources>
