--- a/app/src/main/res/layout/global_dialog_item_layout.xml
+++ b/app/src/main/res/layout/global_dialog_item_layout.xml
@@ -2,37 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:elevation="8dp"
     android:background="@android:color/transparent"
     android:orientation="vertical"
-    android:padding="16dp">
+    tools:background="@color/black">
 
     <TextView
         android:id="@+id/dialog_item_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        tools:text="Title" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        tools:text="WTO-03" />
 
     <TextView
         android:id="@+id/dialog_item_message_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:textSize="18sp"
-        tools:text="Message" />
-
-    <ImageView
-        android:id="@+id/dialog_item_error_iv"
-        android:layout_width="400dp"
-        android:layout_height="300dp"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/ic_launcher_background"
-        android:src="@drawable/ic_launcher_foreground" />
+        android:layout_marginTop="18dp"
+        android:textColor="@color/white"
+        android:textSize="22sp"
+        tools:text="Please follow the instructions for regular maintenance." />
 
 </LinearLayout>
 
