--- a/app/src/main/res/layout/global_dialog_layout.xml
+++ b/app/src/main/res/layout/global_dialog_layout.xml
@@ -1,53 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/transparent"
-    android:gravity="center">
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="900dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:orientation="vertical">
+        android:layout_width="1280dp"
+        android:layout_height="670dp"
+        android:layout_marginTop="60dp"
+        android:background="#E6000000"
+        android:gravity="center">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/dialog_error_rv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:overScrollMode="never" />
+        <RelativeLayout
+            android:layout_width="834dp"
+            android:layout_height="394dp"
+            android:background="@drawable/home_entrance_dialog_bg"
+            android:paddingStart="32dp"
+            android:paddingTop="27dp"
+            android:paddingEnd="32dp"
+            android:paddingBottom="27dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
-            android:gravity="end"
-            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/global_warning_close_iv"
+                android:layout_width="40dp"
+                android:layout_height="42dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="37dp"
+                android:layout_marginEnd="37dp"
+                android:src="@drawable/home_entrance_close_ic" />
 
-            <Button
-                android:id="@+id/dialog_next_bt"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:text="*next" />
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="80dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/dialog_confirm_bt"
-                android:layout_width="wrap_content"
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/home_warning_normal_ic" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:text="@string/global_warning_title"
+                    android:textColor="@color/white"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/dialog_error_rv"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:text="@string/common_button_cancel" />
+                android:layout_marginTop="179dp"
+                android:overScrollMode="never" />
 
-            <Button
-                android:id="@+id/dialog_cancel_bt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/common_button_confirm" />
-        </LinearLayout>
-
+        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
