--- a/app/src/main/res/layout/global_dialog_item_layout.xml
+++ b/app/src/main/res/layout/global_dialog_item_layout.xml
@@ -22,10 +22,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="14dp"
         android:textColor="@color/white"
         android:textSize="22sp"
-        tools:text="Please follow the instructions for regular maintenance." />
+        android:text="@string/global_warning_follow_instruction" />
 
 </LinearLayout>
 
