--- a/app/src/main/res/layout/global_dialog_item_layout.xml
+++ b/app/src/main/res/layout/global_dialog_item_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@android:color/transparent"
     android:orientation="vertical"
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="10dp"
         android:textColor="@color/white"
         android:textSize="22sp"
         android:text="@string/global_warning_follow_instruction" />
