--- a/app/src/main/res/layout/global_dialog_layout.xml
+++ b/app/src/main/res/layout/global_dialog_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -51,12 +52,26 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/dialog_error_rv"
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/dialog_error_vp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="189dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="160dp"
+                android:layout_marginBottom="80dp"
                 android:overScrollMode="never" />
+
+            <com.inno.coffee.utilities.IndicatorView
+                android:id="@+id/dialog_indicator"
+                android:layout_width="400dp"
+                android:layout_height="20dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="20dp"
+                android:visibility="gone"
+                app:backgroundColor="#FF0E0E0F"
+                app:indicatorColor="#FF00DE93"
+                app:indicatorHeight="14dp"
+                app:indicatorWidth="200dp" />
 
         </RelativeLayout>
     </LinearLayout>
