--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -11,4 +11,11 @@
         <attr name="coffeeTimePickerStickColor" format="color|reference" />
         <attr name="coffeeTimePickerSelectColor" format="color|reference" />
     </declare-styleable>
+
+    <declare-styleable name="IndicatorView">
+        <attr name="indicatorWidth" format="dimension" />
+        <attr name="indicatorHeight" format="dimension" />
+        <attr name="indicatorColor" format="color|reference" />
+        <attr name="backgroundColor" format="color|reference" />
+    </declare-styleable>
 </resources>
