--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Coffee" parent="android:Theme.Material.Light.NoActionBar.Fullscreen" />
+    <style name="Theme.Coffee" parent="android:Theme.Material.Light.NoActionBar.Fullscreen">
+        <item name="android:windowDisablePreview">true</item>
+    </style>
 
     <style name="SplashTheme" parent="android:Theme.Material.Light.NoActionBar.Fullscreen">
         <item name="android:windowBackground">@drawable/splash_bg</item>
